Cleanup Intellij warnings in Hive metadata and metastore code